--- a/orders/templates/base.html
+++ b/orders/templates/base.html
@@ -12,7 +12,11 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>        
     </head>
-    <body>        
+    <body>    
+        <nav>
+            <a href="{% url 'home' %}"><h2> Order Sites</h2></a> 
+        </nav>    
+        
         {% block content %}       
         {% endblock %}            
     </body>
