--- a/orders/templates/detail.html
+++ b/orders/templates/detail.html
@@ -4,16 +4,14 @@
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-<a href="{% url 'home' %}">Home</a> 
+
 <a href="{% url 'order-create' %}">Create Order</a> 
 <a href="{% url 'goods-create' %}">Create Goods</a> 
 
 
 <div class="container-fluid">
-    <a href="{% url 'order-delete' order_detail.slug %}">Delete Order</a> 
-    <a href="{% url 'order-update' order_detail.slug %}">Update Order</a> 
     <ul>
-        <li>
+        
             <h5>            
                 goods name:
                 {{goods_detail.name}}         
@@ -28,18 +26,17 @@
                 goods manufacturer:
                 {{goods_detail.manufacturer}}
                 <br>
-                Order detail:
+                Order quantity:
                 {{order_detail.quantity}}
             </h5> 
-            
-        </li>
-       
+            <a href="{% url 'order-delete' order_detail.slug %}">Delete Order</a> 
+            <a href="{% url 'order-update' order_detail.slug %}">Change Order</a>    
     
     
     </ul>
 </div>
-<div class="=container-fluid">Goods you may like
-    <li>
+<div class="=container-fluid"><h2> Goods you may like</h2>
+    
         {% for reco in recommended_goods %}
             <h5>
                 Name:
@@ -49,7 +46,7 @@
                 Price:
                 {{reco.price }}
             </h5>
-        </li>
+        
         {% endfor %}
 
 </div>
