--- a/orders/templates/home.html
+++ b/orders/templates/home.html
@@ -4,7 +4,7 @@
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-<a href="{% url 'home' %}"><h2> Order Sites</h2></a> 
+
 
 <a href="{% url 'goods-create' %}">Create Goods</a> 
 
@@ -12,17 +12,20 @@
 <ul>
     {% for order in order_list %}
     
+    
     <li>
         <h5>            
             counter_party:
             <a href="{{order.get_absolute_url}}" target="_blank">{{ order.counter_party }}  </a>         
-            <br>
-            
+            <br>            
             Date:
             {{order.date}}
             <br>
-            Goods Desription:
-            {{goods.description}}
+            Goods Quantity:
+            {{order.quantity}}            
+            <br>
+            Order Goods:
+            {{order.goods}}
             <br>
            
         </h5> 
