--- a/orders/templates/delete.html
+++ b/orders/templates/delete.html
@@ -7,7 +7,7 @@
 <form method="post">{% csrf_token %}
      
  
-    <p>Are you sure you want to delete "{{ object }}"?</p>
+    <p>Are you sure you want to delete Order from "{{ object }}"?</p>
      
      
         <input type="submit" value="Confirm">
